--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
-    "@mui/joy": "",
+    "@mui/joy": "*",
     "react": ">=17.0.0"
   },
   "devDependencies": {
