--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iimm/formily-joy",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "formily components of @mui/joy UI",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -41,21 +41,22 @@
     "@emotion/styled": "^11.10.6",
     "@mui/joy": "5.0.0-alpha.68",
     "@types/react": "^18.0.28",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
     "eslint-config-egg": "^12.1.0",
     "eslint-plugin-react": "^7.32.2",
-    "father": "^4.1.5",
+    "father": "^4.1.6",
     "react": "^18.2.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@formily/core": "^2.2.19",
-    "@formily/react": "^2.2.19",
-    "@iimm/shared": "^1.3.1",
-    "@mui/icons-material": "^5.11.9",
-    "ahooks": "^3.7.4",
+    "@formily/core": "^2.2.20",
+    "@formily/react": "^2.2.20",
+    "@iimm/react-shared": "^0.1.0",
+    "@iimm/shared": "^1.3.2",
+    "@mui/icons-material": "^5.11.11",
+    "ahooks": "^3.7.5",
     "classnames": "^2.3.2",
     "react-dropzone": "^14.2.3"
   }
